<resources>
    <string name="app_name">GamEx</string>
    <string name="facebook_app_id">2091823634460119</string>
    <string name="fb_login_protocol_scheme">fb2091823634460119</string>


    <!--Login screen-->
    <string name="title_activity_login">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="create_new_account">Create New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
