<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="64sp"
        android:textColor="@color/color_primary"
        android:fontFamily="@font/leckerli_one_regular"
        android:layout_marginVertical="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="24dp"
            android:inputType="text"
            android:maxLines="1"
            android:theme="@style/MyEditText"
            android:textColor="@color/txt_black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="24dp"
            android:maxLines="1"
            android:theme="@style/MyEditText"
            android:textColor="@color/txt_black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:text="@string/sign_in"
            android:background="@drawable/effect_ripple" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/color_primary"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No account yet? "
            android:textColor="@color/txt_hint"/>

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create one!"
            android:textStyle="bold"
            android:textColor="@color/color_primary" />

    </LinearLayout>

</RelativeLayout>